<?xml version="1.0"?>
<package format="2">
  <name>image_subscriber</name>
  <version>0.0.1</version>
  <description>ROS2 Image Subscriber and HTTP Sender</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libcurl</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libcurl</exec_depend>

  <!-- Test dependencies (optional, if you have tests) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  </export>
</package>
