<?xml version="1.0"?>
<package format="3">
  <name>hobot_image_publisher</name>
  <version>2.1.0</version>
  <description>TogetheROS hobot image publisher</description>
  <maintainer email="56556545">zhukao</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>hbm_img_msgs</depend>
  <depend>img_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
